# wizard_face

./: .gitignore  README.md  config.py  pyproject.toml  run.py
app/: __init__.py  module.py
app/_webapi/: __init__.py
app/consts/: __init__.py  errors.py
app/loggers/: __init__.py
app/models/: __init__.py  basic_model.py  document_model.py
app/services/: basic_service.py  common_help_services.py  enterprise_agents.py  knowledge_base_service.py  report_service.py  security_service.py  workflow_service.py
app/services/data/vector_store/manuals/: chroma.sqlite3
app/utils/: README.md  __init__.py  db_utils.py  example_use.py  face_demo.py  face_tool.py  plate_demo.py  plate_tool.py  strings.py
app/views/: __init__.py  ai_views.py  basic_views.py  mcp_views.py
conf/: SUPERVISOR_GUIDE.md  generate_supervisor_conf.py  supervisor.conf  supervisor_gunicorn.conf  supervisor_setup.sh  supervisor_template.conf  supervisor_variables.md  supervisor_wizard.conf
data/vector_store/manuals/: chroma.sqlite3
